keyword guideline changes

--- a/artifacts/acvp_sub_ecdsa.html
+++ b/artifacts/acvp_sub_ecdsa.html
@@ -377,7 +377,7 @@
 <link href="#rfc.section.1" rel="Chapter" title="1 Introduction"/>
 <link href="#rfc.section.1.1" rel="Chapter" title="1.1 Requirements Language"/>
 <link href="#rfc.section.2" rel="Chapter" title="2 Capabilities Registration"/>
-<link href="#rfc.section.2.1" rel="Chapter" title="2.1 Supported DSA2 Functions"/>
+<link href="#rfc.section.2.1" rel="Chapter" title="2.1 Supported ECDSA2 Functions"/>
 <link href="#rfc.section.2.2" rel="Chapter" title="2.2 Supported ECDSA2 Functions"/>
 <link href="#rfc.section.2.3" rel="Chapter" title="2.3 Supported SHA Methods"/>
 <link href="#rfc.section.2.4" rel="Chapter" title="2.4 Supported Method Options"/>
@@ -460,7 +460,7 @@
   	<li>1.   <a href="#rfc.section.1">Introduction</a></li>
 <ul><li>1.1.   <a href="#rfc.section.1.1">Requirements Language</a></li>
 </ul><li>2.   <a href="#rfc.section.2">Capabilities Registration</a></li>
-<ul><li>2.1.   <a href="#rfc.section.2.1">Supported DSA2 Functions</a></li>
+<ul><li>2.1.   <a href="#rfc.section.2.1">Supported ECDSA2 Functions</a></li>
 <li>2.2.   <a href="#rfc.section.2.2">Supported ECDSA2 Functions</a></li>
 <li>2.3.   <a href="#rfc.section.2.3">Supported SHA Methods</a></li>
 <li>2.4.   <a href="#rfc.section.2.4">Supported Method Options</a></li>
@@ -651,8 +651,8 @@
   </tbody>
 </table>
 <p id="rfc.section.2.p.3">Note: Some optional values are required depending on the algorithm.  Failure to provide these values will result in the ACVP server returning an error to the ACVP client during registration.</p>
-<h1 id="rfc.section.2.1"><a href="#rfc.section.2.1">2.1.</a> <a href="#supported_types" id="supported_types">Supported DSA2 Functions</a></h1>
-<p id="rfc.section.2.1.p.1">The following DSA2 method types may be advertised by the ACVP compliant crypto module:</p>
+<h1 id="rfc.section.2.1"><a href="#rfc.section.2.1">2.1.</a> <a href="#supported_types" id="supported_types">Supported ECDSA2 Functions</a></h1>
+<p id="rfc.section.2.1.p.1">The following ECDSA2 method types may be advertised by the ACVP compliant crypto module:</p>
 <p/>
 
 <ul>
