--- a/artifacts/acvp_sub_ecdsa.html
+++ b/artifacts/acvp_sub_ecdsa.html
@@ -378,7 +378,7 @@
 <link href="#rfc.section.1.1" rel="Chapter" title="1.1 Requirements Language"/>
 <link href="#rfc.section.2" rel="Chapter" title="2 Capabilities Registration"/>
 <link href="#rfc.section.2.1" rel="Chapter" title="2.1 Supported ECDSA2 Functions"/>
-<link href="#rfc.section.2.2" rel="Chapter" title="2.2 Supported ECDSA2 Functions"/>
+<link href="#rfc.section.2.2" rel="Chapter" title="2.2 Supported ECDSA2 Curves"/>
 <link href="#rfc.section.2.3" rel="Chapter" title="2.3 Supported SHA Methods"/>
 <link href="#rfc.section.2.4" rel="Chapter" title="2.4 Supported Method Options"/>
 <link href="#rfc.section.3" rel="Chapter" title="3 Test Vectors"/>
@@ -461,7 +461,7 @@
 <ul><li>1.1.   <a href="#rfc.section.1.1">Requirements Language</a></li>
 </ul><li>2.   <a href="#rfc.section.2">Capabilities Registration</a></li>
 <ul><li>2.1.   <a href="#rfc.section.2.1">Supported ECDSA2 Functions</a></li>
-<li>2.2.   <a href="#rfc.section.2.2">Supported ECDSA2 Functions</a></li>
+<li>2.2.   <a href="#rfc.section.2.2">Supported ECDSA2 Curves</a></li>
 <li>2.3.   <a href="#rfc.section.2.3">Supported SHA Methods</a></li>
 <li>2.4.   <a href="#rfc.section.2.4">Supported Method Options</a></li>
 </ul><li>3.   <a href="#rfc.section.3">Test Vectors</a></li>
@@ -661,8 +661,8 @@
   <li>sigGen</li>
   <li>sigVer</li>
 </ul>
-<h1 id="rfc.section.2.2"><a href="#rfc.section.2.2">2.2.</a> <a href="#supported_curves" id="supported_curves">Supported ECDSA2 Functions</a></h1>
-<p id="rfc.section.2.2.p.1">The following ECDSA2 method types may be advertised by the ACVP compliant crypto module:</p>
+<h1 id="rfc.section.2.2"><a href="#rfc.section.2.2">2.2.</a> <a href="#supported_curves" id="supported_curves">Supported ECDSA2 Curves</a></h1>
+<p id="rfc.section.2.2.p.1">The following ECDSA2 curves may be advertised by the ACVP compliant crypto module:</p>
 <p/>
 
 <ul>
