--- a/artifacts/acvp_sub_dsa.html
+++ b/artifacts/acvp_sub_dsa.html
@@ -377,8 +377,10 @@
 <link href="#rfc.section.1" rel="Chapter" title="1 Introduction"/>
 <link href="#rfc.section.1.1" rel="Chapter" title="1.1 Requirements Language"/>
 <link href="#rfc.section.2" rel="Chapter" title="2 Capabilities Registration"/>
-<link href="#rfc.section.2.1" rel="Chapter" title="2.1 Supported DSA2 Functions"/>
-<link href="#rfc.section.2.2" rel="Chapter" title="2.2 Supported SHA Methods"/>
+<link href="#rfc.section.2.1" rel="Chapter" title="2.1 Required Prerequisite Algorithms for DSA Validations"/>
+<link href="#rfc.section.2.2" rel="Chapter" title="2.2 DSA2 Algorithm Capabilities Registration"/>
+<link href="#rfc.section.2.3" rel="Chapter" title="2.3 Supported DSA2 Functions"/>
+<link href="#rfc.section.2.4" rel="Chapter" title="2.4 Supported SHA Methods"/>
 <link href="#rfc.section.3" rel="Chapter" title="3 Test Vectors"/>
 <link href="#rfc.section.3.1" rel="Chapter" title="3.1 Test Groups JSON Schema"/>
 <link href="#rfc.section.3.2" rel="Chapter" title="3.2 Test Vectors JSON Schema"/>
@@ -458,8 +460,10 @@
   	<li>1.   <a href="#rfc.section.1">Introduction</a></li>
 <ul><li>1.1.   <a href="#rfc.section.1.1">Requirements Language</a></li>
 </ul><li>2.   <a href="#rfc.section.2">Capabilities Registration</a></li>
-<ul><li>2.1.   <a href="#rfc.section.2.1">Supported DSA2 Functions</a></li>
-<li>2.2.   <a href="#rfc.section.2.2">Supported SHA Methods</a></li>
+<ul><li>2.1.   <a href="#rfc.section.2.1">Required Prerequisite Algorithms for DSA Validations</a></li>
+<li>2.2.   <a href="#rfc.section.2.2">DSA2 Algorithm Capabilities Registration</a></li>
+<li>2.3.   <a href="#rfc.section.2.3">Supported DSA2 Functions</a></li>
+<li>2.4.   <a href="#rfc.section.2.4">Supported SHA Methods</a></li>
 </ul><li>3.   <a href="#rfc.section.3">Test Vectors</a></li>
 <ul><li>3.1.   <a href="#rfc.section.3.1">Test Groups JSON Schema</a></li>
 <li>3.2.   <a href="#rfc.section.3.2">Test Vectors JSON Schema</a></li>
@@ -482,8 +486,63 @@
 <p id="rfc.section.1.1.p.1">The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT", "SHOULD", "SHOULD NOT", "RECOMMENDED", "MAY", and "OPTIONAL" in this document are to be interpreted in <a href="#RFC2119">RFC 2119</a> <cite title="NONE">[RFC2119]</cite>.</p>
 <h1 id="rfc.section.2"><a href="#rfc.section.2">2.</a> <a href="#caps_reg" id="caps_reg">Capabilities Registration</a></h1>
 <p id="rfc.section.2.p.1">ACVP requires crypto modules to register their capabilities.  This allows the crypto module to advertise support for specific algorithms, notifying the ACVP server which algorithms need test vectors generated for the validation process.  This section describes the constructs for advertising support of DSA2 algorithms to the ACVP server.</p>
-<p id="rfc.section.2.p.2">The algorithm capabilities are advertised as JSON objects within the 'algorithms' value of the ACVP registration message.  The 'algorithms' value is an array, where each array element is an individual JSON object defined in this section.  The 'algorithms' value is part of the 'capability_exchange' element of the ACVP JSON registration message.  See the ACVP specification for details on the registration message.  Each algorithm capability advertised is a self-contained JSON object.  The following JSON values are used for DSA2 algorithm capabilities:</p>
+<p id="rfc.section.2.p.2">The algorithm capabilities are advertised as JSON objects within the 'algorithms' value of the ACVP registration message.  The 'algorithms' value is an array, where each array element is an individual JSON object defined in this section.  The 'algorithms' value is part of the 'capability_exchange' element of the ACVP JSON registration message.  See the ACVP specification for details on the registration message.</p>
+<h1 id="rfc.section.2.1"><a href="#rfc.section.2.1">2.1.</a> <a href="#prereq_algs" id="prereq_algs">Required Prerequisite Algorithms for DSA Validations</a></h1>
+<p id="rfc.section.2.1.p.1">Each DSA implementation relies on other cryptographic primitives.  For example, DSA uses an underlying SHA algorithm. Each of these underlying algorithm primitives must be validated, either separately or as part of the same submission. ACVP provides a mechanism for specifying the required prerequisites:</p>
 <div id="rfc.table.1"/>
+<div id="rereqs_table"/>
+<table cellpadding="3" cellspacing="0" class="tt full center">
+  <caption>Required DSA2 Prerequisite Algorithms JSON Values</caption>
+  <thead>
+    <tr>
+      <th class="left">JSON Value</th>
+      <th class="left">Description</th>
+      <th class="left">JSON type</th>
+      <th class="left">Valid Values</th>
+      <th class="left">Optional</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td class="left">algorithm</td>
+      <td class="left">a prerequisite algorithm</td>
+      <td class="left">value</td>
+      <td class="left">DRBG, SHA, SHA_OPT2</td>
+      <td class="left">No</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
+      <td class="left">valValue</td>
+      <td class="left">algorithm validation number</td>
+      <td class="left">value</td>
+      <td class="left">actual number or "same"</td>
+      <td class="left">No</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
+      <td class="left">prereqAlgVal</td>
+      <td class="left">prerequistie algorithm validation</td>
+      <td class="left">object with algorithm and valValue properties</td>
+      <td class="left">see above</td>
+      <td class="left">No</td>
+    </tr>
+  </tbody>
+</table>
+<h1 id="rfc.section.2.2"><a href="#rfc.section.2.2">2.2.</a> <a href="#dsa_caps_reg" id="dsa_caps_reg">DSA2 Algorithm Capabilities Registration</a></h1>
+<p id="rfc.section.2.2.p.1">Each algorithm capability advertised is a self-contained JSON object using the following values.</p>
+<div id="rfc.table.2"/>
 <div id="caps_table"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
   <caption>DSA2 Algorithm Capabilities JSON Values</caption>
@@ -512,38 +571,10 @@
       <td class="left"/>
     </tr>
     <tr>
-      <td class="left">shaVal</td>
-      <td class="left">The SHA validation number or implemented in "same" implementation</td>
-      <td class="left">value</td>
-      <td class="left">same or value</td>
-      <td class="left">No</td>
-    </tr>
-    <tr>
-      <td class="left"/>
-      <td class="left"/>
-      <td class="left"/>
-      <td class="left"/>
-      <td class="left"/>
-    </tr>
-    <tr>
-      <td class="left">sha2Val</td>
-      <td class="left">A second (optional) SHA validation number or implemented in "same" implementation</td>
-      <td class="left">value</td>
-      <td class="left">same or value</td>
-      <td class="left">Yes</td>
-    </tr>
-    <tr>
-      <td class="left"/>
-      <td class="left"/>
-      <td class="left"/>
-      <td class="left"/>
-      <td class="left"/>
-    </tr>
-    <tr>
-      <td class="left">drbgVal</td>
-      <td class="left">The DRBG validation number or implemented in "same" implementation</td>
-      <td class="left">value</td>
-      <td class="left">same or value</td>
+      <td class="left">prereqVals</td>
+      <td class="left">prerequistie algorithm validations</td>
+      <td class="left">array of prereqAlgVal objects</td>
+      <td class="left">See <a href="#prereq_algs">Section 2.1</a></td>
       <td class="left">No</td>
     </tr>
     <tr>
@@ -571,7 +602,7 @@
       <td class="left">type</td>
       <td class="left">Type of method or algorithm supported, represented as an array of the following JSON values</td>
       <td class="left">value</td>
-      <td class="left">See <a href="#supported_types">Section 2.1</a></td>
+      <td class="left">See <a href="#supported_types">Section 2.3</a></td>
       <td class="left">No</td>
     </tr>
     <tr>
@@ -641,14 +672,14 @@
       <td class="left">sha</td>
       <td class="left">Array of SHA values used for an LN</td>
       <td class="left">array</td>
-      <td class="left">See <a href="#supported_sha">Section 2.2</a></td>
+      <td class="left">See <a href="#supported_sha">Section 2.4</a></td>
       <td class="left">Yes</td>
     </tr>
   </tbody>
 </table>
-<p id="rfc.section.2.p.3">Note: Some optional values are required depending on the algorithm.  Failure to provide these values will result in the ACVP server returning an error to the ACVP client during registration.</p>
-<h1 id="rfc.section.2.1"><a href="#rfc.section.2.1">2.1.</a> <a href="#supported_types" id="supported_types">Supported DSA2 Functions</a></h1>
-<p id="rfc.section.2.1.p.1">The following DSA2 method types may be advertised by the ACVP compliant crypto module:</p>
+<p id="rfc.section.2.2.p.2">Note: Some optional values are required depending on the algorithm.  Failure to provide these values will result in the ACVP server returning an error to the ACVP client during registration.</p>
+<h1 id="rfc.section.2.3"><a href="#rfc.section.2.3">2.3.</a> <a href="#supported_types" id="supported_types">Supported DSA2 Functions</a></h1>
+<p id="rfc.section.2.3.p.1">The following DSA2 method types may be advertised by the ACVP compliant crypto module:</p>
 <p/>
 
 <ul>
@@ -658,8 +689,8 @@
   <li>SigGen</li>
   <li>SigVer</li>
 </ul>
-<h1 id="rfc.section.2.2"><a href="#rfc.section.2.2">2.2.</a> <a href="#supported_sha" id="supported_sha">Supported SHA Methods</a></h1>
-<p id="rfc.section.2.2.p.1">The following SHA methods may be advertised by the ACVP compliant crypto module:</p>
+<h1 id="rfc.section.2.4"><a href="#rfc.section.2.4">2.4.</a> <a href="#supported_sha" id="supported_sha">Supported SHA Methods</a></h1>
+<p id="rfc.section.2.4.p.1">The following SHA methods may be advertised by the ACVP compliant crypto module:</p>
 <p/>
 
 <ul>
@@ -674,7 +705,7 @@
 <h1 id="rfc.section.3"><a href="#rfc.section.3">3.</a> <a href="#test_vectors" id="test_vectors">Test Vectors</a></h1>
 <p id="rfc.section.3.p.1">The ACVP server provides test vectors to the ACVP client, which are then processed and returned to the ACVP server for validation.  A typical ACVP validation session would require multiple test vector sets to be downloaded and processed by the ACVP client.  Each test vector set represents an individual DSA2 function.  This section describes the JSON schema for a test vector set used with DSA2 algorithms.</p>
 <p id="rfc.section.3.p.2">The test vector set JSON schema is a multi-level hierarchy that contains meta data for the entire vector set as well as individual test vectors to be processed by the ACVP client.The following table describes the JSON elements at the top level of the hierarchy.  </p>
-<div id="rfc.table.2"/>
+<div id="rfc.table.3"/>
 <div id="vs_top_table"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
   <caption>Vector Set JSON Object</caption>
@@ -726,7 +757,7 @@
 <h1 id="rfc.section.3.1"><a href="#rfc.section.3.1">3.1.</a> <a href="#tgjs" id="tgjs">Test Groups JSON Schema</a></h1>
 <p id="rfc.section.3.1.p.1">The testGroups element at the top level in the test vector JSON object is an array of test groups.  Test vectors are grouped into similar test cases to reduce the amount of data transmitted in the vector set.  For instance, all test vectors that use the same key size would be grouped together.  The Test Group JSON object contains meta data that applies to all test vectors within the group. The following table describes the secure hash JSON elements of the Test Group JSON object.</p>
 <p id="rfc.section.3.1.p.2">The test group for DSA2 is as follows:</p>
-<div id="rfc.table.3"/>
+<div id="rfc.table.4"/>
 <div id="vs_tg_table5"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
   <caption>Vector Group JSON Object</caption>
@@ -741,7 +772,7 @@
   <tbody>
     <tr>
       <td class="left">type</td>
-      <td class="left">The method type used for the test vectors.  See <a href="#supported_types">Section 2.1</a> for possible values</td>
+      <td class="left">The method type used for the test vectors.  See <a href="#supported_types">Section 2.3</a> for possible values</td>
       <td class="left">value</td>
       <td class="left">No</td>
     </tr>
@@ -809,7 +840,7 @@
 </table>
 <h1 id="rfc.section.3.2"><a href="#rfc.section.3.2">3.2.</a> <a href="#tvjs" id="tvjs">Test Vectors JSON Schema</a></h1>
 <p id="rfc.section.3.2.p.1">Each test group contains an array of one or more test vectors.  Each test vector is a JSON object that represents a single test case to be processed by the ACVP client.  The following table describes the JSON elements for each DSA2 test vector.</p>
-<div id="rfc.table.4"/>
+<div id="rfc.table.5"/>
 <div id="vs_tc_table5"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
   <caption>Test Case JSON Object</caption>
@@ -964,7 +995,7 @@
 </table>
 <h1 id="rfc.section.4"><a href="#rfc.section.4">4.</a> <a href="#vector_responses" id="vector_responses">Test Vector Responses</a></h1>
 <p id="rfc.section.4.p.1">After the ACVP client downloads and processes a vector set, it must send the resonse vectors back to the ACVP server.  The following table describes the JSON object that represents a vector set response.</p>
-<div id="rfc.table.5"/>
+<div id="rfc.table.6"/>
 <div id="vr_top_table"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
   <caption>Vector Set Response JSON Object</caption>
@@ -1004,7 +1035,7 @@
   </tbody>
 </table>
 <p id="rfc.section.4.p.2">The following table describes the JSON object that represents a vector set response for DSA2.</p>
-<div id="rfc.table.6"/>
+<div id="rfc.table.7"/>
 <div id="vr_top_table5"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
   <caption>Vector Set Response JSON Object</caption>
@@ -1139,14 +1170,14 @@
 
             {
                 "algorithm": "DSA2",
-                "shaVal": "123456",
-                "drbgVal": "123456",
+                "prereqVals" : [{"algorithm" : "SHA", "valValue" : "123456"},
+			        {"algorithm" : "DRBG", "valValue" : "123456"}],
                 "methods": [
 			      { "type" : "PQGGen",
 			        "genPQ" : ["provable", "probable"],
 			        "genG" : ["unverifiable", "canonical"],
 			        "lnInfo" : [
-			                { "ln : 2048-224, 
+			                { "ln" : 2048-224, 
 				          "sha" : [SHA-1, SHA-224, SHA-256]},
 				        { "ln" : 2048-256, 
 				          "sha" : [SHA-1, SHA-224, SHA-256]},
@@ -1156,7 +1187,7 @@
 			        "genPQ" : ["provable", "probable"],
 			        "genG" : ["unverifiable", "canonical"],
 			        "lnInfo" : [
-			                { "ln : 2048-224, 
+			                { "ln" : 2048-224, 
 				          "sha" : [SHA-1, SHA-224, SHA-256]},
 				        { "ln" : 2048-256, 
 				          "sha" : [SHA-1, SHA-224, SHA-256]},
@@ -1176,7 +1207,7 @@
                     {
                       "type": "PQGVer",
 		      "genPQ" : "probable",
-		      "ln : 2048-224, 
+		      "ln" : 2048-224, 
 		      "sha" : "SHA-224",
                       "tests": [
                         {
