--- a/artifacts/acvp_sub_kdf135_ssh.html
+++ b/artifacts/acvp_sub_kdf135_ssh.html
@@ -578,6 +578,13 @@
       <td class="left">No</td>
     </tr>
     <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">methods</td>
       <td class="left">Type of method or algorithm supported</td>
       <td class="left">array</td>
