--- a/artifacts/acvp_sub_drbg.html
+++ b/artifacts/acvp_sub_drbg.html
@@ -502,84 +502,84 @@
   </thead>
   <tbody>
     <tr>
-      <td class="left">hashDRBG</td>
-      <td class="left">SHA-1</td>
+      <td class="left">"hashDRBG"</td>
+      <td class="left">"SHA-1"</td>
     </tr>
     <tr>
       <td class="left"/>
-      <td class="left">SHA-224</td>
+      <td class="left">"SHA-224"</td>
     </tr>
     <tr>
       <td class="left"/>
-      <td class="left">SHA-256</td>
+      <td class="left">"SHA-256"</td>
     </tr>
     <tr>
       <td class="left"/>
-      <td class="left">SHA-384</td>
+      <td class="left">"SHA-384"</td>
     </tr>
     <tr>
       <td class="left"/>
-      <td class="left">SHA-512</td>
+      <td class="left">"SHA-512"</td>
     </tr>
     <tr>
       <td class="left"/>
-      <td class="left">SHA-512/224</td>
+      <td class="left">"SHA-512/224"</td>
     </tr>
     <tr>
       <td class="left"/>
-      <td class="left">SHA-512/256</td>
-    </tr>
-    <tr>
-      <td class="left"/>
-      <td class="left"/>
-    </tr>
-    <tr>
-      <td class="left">hmacDRBG</td>
-      <td class="left">SHA-1</td>
-    </tr>
-    <tr>
-      <td class="left"/>
-      <td class="left">SHA-224</td>
-    </tr>
-    <tr>
-      <td class="left"/>
-      <td class="left">SHA-256</td>
-    </tr>
-    <tr>
-      <td class="left"/>
-      <td class="left">SHA-384</td>
-    </tr>
-    <tr>
-      <td class="left"/>
-      <td class="left">SHA-512</td>
-    </tr>
-    <tr>
-      <td class="left"/>
-      <td class="left">SHA-512/224</td>
-    </tr>
-    <tr>
-      <td class="left"/>
-      <td class="left">SHA-512/256</td>
+      <td class="left">"SHA-512/256"</td>
     </tr>
     <tr>
       <td class="left"/>
       <td class="left"/>
     </tr>
     <tr>
-      <td class="left">ctrDRBG</td>
-      <td class="left">3KeyTDEA</td>
+      <td class="left">"hmacDRBG"</td>
+      <td class="left">"SHA-1"</td>
     </tr>
     <tr>
       <td class="left"/>
-      <td class="left">AES-128</td>
+      <td class="left">"SHA-224"</td>
     </tr>
     <tr>
       <td class="left"/>
-      <td class="left">AES-192</td>
+      <td class="left">"SHA-256"</td>
     </tr>
     <tr>
       <td class="left"/>
-      <td class="left">AES-256</td>
+      <td class="left">"SHA-384"</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left">"SHA-512"</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left">"SHA-512/224"</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left">"SHA-512/256"</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
+      <td class="left">"ctrDRBG"</td>
+      <td class="left">"3KeyTDEA"</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left">"AES-128"</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left">"AES-192"</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left">"AES-256"</td>
     </tr>
   </tbody>
 </table>
@@ -1237,7 +1237,7 @@
                 "algorithm": "ctrDRBG",
                 "mode": "AES-128",
                 "derFuncEnabled":"yes",
-               "prereqVals": [{"algorithm": "AES", "valValue": "1234"}],
+                "prereqVals": [{"algorithm": "AES", "valValue": "1234"}],
                 "predResistanceEnabled": "yes",
                 "reseedImplemented" : "yes",
                 "entropyInputLen":"128",
