--- a/artifacts/acvp_sub_rsa.html
+++ b/artifacts/acvp_sub_rsa.html
@@ -568,28 +568,28 @@
   </thead>
   <tbody>
     <tr>
-      <td class="left">RSA</td>
-      <td class="left">keyGen</td>
+      <td class="left">"RSA"</td>
+      <td class="left">"keyGen"</td>
     </tr>
     <tr>
       <td class="left"/>
-      <td class="left">sigGen</td>
+      <td class="left">"sigGen"</td>
     </tr>
     <tr>
       <td class="left"/>
-      <td class="left">sigVer</td>
+      <td class="left">"sigVer"</td>
     </tr>
     <tr>
       <td class="left"/>
-      <td class="left">legacySigVer</td>
+      <td class="left">"legacySigVer"</td>
     </tr>
     <tr>
       <td class="left"/>
-      <td class="left">componentSigPrimitive</td>
+      <td class="left">"componentSigPrimitive"</td>
     </tr>
     <tr>
       <td class="left"/>
-      <td class="left">componentDecPrimitive</td>
+      <td class="left">"componentDecPrimitive"</td>
     </tr>
   </tbody>
 </table>
@@ -681,7 +681,7 @@
       <td class="left">algorithm</td>
       <td class="left">The RSA algorithm to be validated.</td>
       <td class="left">value</td>
-      <td class="left">RSA</td>
+      <td class="left">"RSA"</td>
       <td class="left">No</td>
     </tr>
     <tr>
@@ -889,7 +889,7 @@
       <td class="left">mode</td>
       <td class="left">The mode to be validated</td>
       <td class="left">value</td>
-      <td class="left">keyGen, see <a href="#algs_table">Table 1</a></td>
+      <td class="left">"keyGen", see <a href="#algs_table">Table 1</a></td>
       <td class="left">No</td>
     </tr>
     <tr>
@@ -1780,7 +1780,7 @@
     <tr>
       <td class="left">sigResult</td>
       <td class="left">the result from the digital signature verirfication</td>
-      <td class="left">pass/fail</td>
+      <td class="left">"pass"/"fail"</td>
       <td class="left">Yes</td>
     </tr>
   </tbody>
