--- a/artifacts/acvp_sub_kas_ecc.html
+++ b/artifacts/acvp_sub_kas_ecc.html
@@ -1663,8 +1663,8 @@
                 "functions": ["keyPairGen", "dpGen"],
 		"scheme" : [{"Sec 5.7.1.2 ECCDH Component Test" : 
 			         { "primitive" : "yes",
-			           "ecdsa" : [P-256]},
-			         },
+			           "ecdsa" : ["P-256"]
+			         }
                              },
 		             { "Full Unified" : 
 			        { "withKDF" : "yes",
@@ -1680,10 +1680,10 @@
 					"ccmNonceLen" : 13,
 					"ccmMacLen" : 16,
 					"cmacAESKeyLen" : [128],
-					"cmacMacLen" : 128,
-				     },
-				},
-                             },
+					"cmacMacLen" : 128
+				     }
+				}
+                             }
 			   ] 
             }
             </pre>
@@ -1697,17 +1697,17 @@
                   "testGroups": [
                     {
                       "scheme": "Sec 5.7.1.2 ECCDH Component Test",
-		      "curve" : P-256, 
+		      "curve" : "P-256", 
 		      "sha" : "SHA-256",
                       "tests": [
                         {
                           "tcId": 2170,
 			  "qsX" : "3b0c9d86b66a410a3f924979f62a29a160bbd2e8b87b44422057a8a5e5dd49f6",
-			  "qsY" : "7e38ac86c83b787206728525d0c194838f8ca8c6a8e1b21d38acdc17456d0a4f",
-                        },
+			  "qsY" : "7e38ac86c83b787206728525d0c194838f8ca8c6a8e1b21d38acdc17456d0a4f"
+                        }
                       ]
                     },
-                      "scheme": "Full Unified",
+                    { "scheme": "Full Unified",
 		      "parmSet" : "EB",
 		      "keyConf" : "yes",
 		      "kcRole" : "provider",
@@ -1731,10 +1731,12 @@
 			  "qeIUTY" : "f61db3ec77cb54c00bdf7690aa0ff1b82234c2a7ed5622bc3177b9c3",
 			  "ccmNonce" : "1517f0379da60bcb70c6216936",
 			  "otherInfo" : "a1b2c3d4e5434156536964554d912b575975a4bfeb9dd47e039956d4afce4d65d0274c90200873fc7484db733fcf35",
-			  "iutTag" : "332d1f595f67e11a9a8fb52000363ca6",
-			},
+			  "iutTag" : "332d1f595f67e11a9a8fb52000363ca6"
+			}
                   ]
                 }
+            ]
+         }
             </pre>
 <h1 id="rfc.appendix.C"><a href="#rfc.appendix.C">Appendix C.</a> <a href="#app-results-ex" id="app-results-ex">Example Test Results JSON Object</a></h1>
 <p id="rfc.section.C.p.1">The following is a example JSON object for KAS ECC test results sent from the crypto module to the ACVP server.</p>
@@ -1752,9 +1754,10 @@
                        {
                             "tcId": 2171,
 			    "z" : "90f66c669c2d6f0c8e150c8d25c581ecf720cf6e30fb39560e04d676045d35218c781e2f503f2a21b72c05781567654a4ba7cb7f9a54eeda",
-			    "macData" : "4b435f325f55a1b2c3d4e54341565369641dbb80e2820f13a6e036a9dbfc846dd2f127c79618e3eb4a06c31a6df61db3ec77cb54c00bdf7690aa0ff1b82234c2a7ed5622bc3177b9c39cf9f8d751b9032e79cb89236cf16eb707fc415411d40645a4796b84c7e0ba911b6dec5dce3a748db2f380c1e55bfc0d9b2a193017387361"
+			    "macData" : "4b435f325f55a1b2c3d4e54341565369641dbb80e2820f13a6e036a9dbfc846dd2f127c79618e3eb4a06c31a6df61db3ec77cb54c00bdf7690aa0ff1b82234c2a7ed5622bc3177b9c39cf9f8d751b9032e79cb89236cf16eb707fc415411d40645a4796b84c7e0ba911b6dec5dce3a748db2f380c1e55bfc0d9b2a193017387361",
 			    "dkm" : "8c1908ce4139f2447e8cc8a99f108c11",
-			    "result" : "false",
+			    "result" : "false"
+                      }
                     ]
                 }
             </pre>
