Added windows equiv of MakeFile, regened artifacts - "WindowsGenerateArtifacts.bat" file is intended for Windows use - Requires the installation of Python and xml2rfc

--- a/artifacts/acvp_protocol.html
+++ b/artifacts/acvp_protocol.html
@@ -412,7 +412,7 @@
 
   <meta name="dct.creator" content="Fussell, B., Ed." />
   <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-protocol-0.2" />
-  <meta name="dct.issued" scheme="ISO8601" content="2016-9-16" />
+  <meta name="dct.issued" scheme="ISO8601" content="2016-9-30" />
   <meta name="dct.abstract" content="This document defines the Automated Cryptographic Validation Protocol(ACVP)." />
   <meta name="description" content="This document defines the Automated Cryptographic Validation Protocol(ACVP)." />
 
@@ -433,10 +433,10 @@
 </tr>
 <tr>
   <td class="left">Intended status: Informational</td>
-  <td class="right">September 16, 2016</td>
+  <td class="right">September 30, 2016</td>
 </tr>
 <tr>
-  <td class="left">Expires: March 20, 2017</td>
+  <td class="left">Expires: April 3, 2017</td>
   <td class="right"></td>
 </tr>
 
@@ -457,7 +457,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet-Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on March 20, 2017.</p>
+<p>This Internet-Draft will expire on April 3, 2017.</p>
 <h1 id="rfc.copyrightnotice">
   <a href="#rfc.copyrightnotice">Copyright Notice</a>
 </h1>
@@ -705,8 +705,8 @@ Status: 200 OK
 Content-Type: application/json
 Content-Length: (length of JWT)
 {
-accessToken : 
-eyJhbGciOiJIUzI1NiIsI.eyJpc3MiOiJodHRwczotcGxlL.mFrs3Zo8eaSNcxiNfvRh9dqKP4F1cB,
+"accessToken" : 
+"eyJhbGciOiJIUzI1NiIsI.eyJpc3MiOiJodHRwczotcGxlL.mFrs3Zo8eaSNcxiNfvRh9dqKP4F1cB",
 }
 
 Once the session is established the client must include the JWT with 
@@ -745,7 +745,7 @@ Accept:
 "operationalEnvironment" : {
 "moduleVersion" : "1.0",
 "processor" : "Intel Woodcrest",
-"operatingSystem" : "Linux 3.1
+"operatingSystem" : "Linux 3.1"
      },
      "implementationDescription" : 
           "Sample crypto module for demonstrating ACV protocol."
@@ -807,7 +807,7 @@ Accept:
 "capabilityResponse" : {          
        "vectorSets" :[{"vsId" :930}],
        "testSession" :{"testId" :183}, 
-"accessToken" :eyJhbGciOiJIUzUxMiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiAibmlzdC5vcmciLCJleHAiOiAxMjMwMTIwLCJjb21wYW55IjogIkNpc2NvIiwianRpIjoxODN9.h1tQALiupn_Jx4UWPPTjFNeY9Wu7DI8bWkbh8Xt0GCr3DYf2J_FzoGwlPnUBuPR63kIN0HmKPrlv6r8Ykb1JeA
+"accessToken" : "eyJhbGciOiJIUzUxMiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiAibmlzdC5vcmciLCJleHAiOiAxMjMwMTIwLCJjb21wYW55IjogIkNpc2NvIiwianRpIjoxODN9.h1tQALiupn_Jx4UWPPTjFNeY9Wu7DI8bWkbh8Xt0GCr3DYf2J_FzoGwlPnUBuPR63kIN0HmKPrlv6r8Ykb1JeA"
     }
 }
 
@@ -849,7 +849,7 @@ Content-Length: &lt;length of results&gt;
 	    { "tcId" : 12340, "result" : "passed" },
             { "tcId" : 12341, "result" : "passed" },
             { "tcId" : 12342, "result" : "incomplete" },
-            { "tcId" : 12343, "result" : "passed" },
+            { "tcId" : 12343, "result" : "passed" }
               ]
    }
 } 
@@ -865,8 +865,8 @@ Status: 200 OK
 Content-Type: application/json
 Content-Length: &lt;length of results&gt;
 {
-version : 0.2,
-retry : 10
+"version" : 0.2,
+"retry" : 10
 }
            </pre>
 <p class="figure">Figure 12</p>
