--- a/artifacts/acvp_sub_dsa.html
+++ b/artifacts/acvp_sub_dsa.html
@@ -1177,20 +1177,20 @@
 			        "genPQ" : ["provable", "probable"],
 			        "genG" : ["unverifiable", "canonical"],
 			        "lnInfo" : [
-			                { "ln" : 2048-224, 
-				          "sha" : [SHA-1, SHA-224, SHA-256]},
-				        { "ln" : 2048-256, 
-				          "sha" : [SHA-1, SHA-224, SHA-256]},
+			                { "ln" : "2048-224", 
+				          "sha" : ["SHA-1", "SHA-224", "SHA-256"]},
+				        { "ln" : "2048-256", 
+				          "sha" : ["SHA-1", "SHA-224", "SHA-256"]}
 				       ]
                               },
 			      { "type" : "PQGVer",
 			        "genPQ" : ["provable", "probable"],
 			        "genG" : ["unverifiable", "canonical"],
 			        "lnInfo" : [
-			                { "ln" : 2048-224, 
-				          "sha" : [SHA-1, SHA-224, SHA-256]},
-				        { "ln" : 2048-256, 
-				          "sha" : [SHA-1, SHA-224, SHA-256]},
+			                { "ln" : "2048-224", 
+				          "sha" : ["SHA-1", "SHA-224", "SHA-256"]},
+				        { "ln" : "2048-256", 
+				          "sha" : ["SHA-1", "SHA-224", "SHA-256"]}
 				       ]
                               }
 			   ] 
@@ -1207,7 +1207,7 @@
                     {
                       "type": "PQGVer",
 		      "genPQ" : "probable",
-		      "ln" : 2048-224, 
+		      "ln" : "2048-224", 
 		      "sha" : "SHA-224",
                       "tests": [
                         {
@@ -1218,7 +1218,7 @@
 			  "counter" : 839,
                         },
                       ]
-                    },
+                    }
                   ]
                 }
             </pre>
@@ -1231,7 +1231,7 @@
                     "testResults": [
                         {
                             "tcId": 2170,
-			    "result" : "False",
+			    "result" : "False"
                         }
                     ]
                 }
