--- a/artifacts/acvp_sub_kdf135_snmp.html
+++ b/artifacts/acvp_sub_kdf135_snmp.html
@@ -846,7 +846,7 @@
 
             {
                 "algorithm": "SNMP",
-                "prereqVals" : [{"algorithm" : "SHA", "valValue" : "123456"}],
+                "prereqVals" : [{"algorithm" : "SHA", "valValue" : "123456"}]
             }
             </pre>
 <h1 id="rfc.appendix.B"><a href="#rfc.appendix.B">Appendix B.</a> <a href="#app-vs-ex" id="app-vs-ex">Example Test Vectors JSON Object</a></h1>
@@ -863,10 +863,10 @@
                       "tests": [
                         {
                           "tcId": 2170,
-			  "password" : "TCBkyNVC",
-                        },
+			  "password" : "TCBkyNVC"
+                        }
                       ]
-                    },
+                    }
                   ]
                 }
             </pre>
@@ -879,7 +879,7 @@
                     "testResults": [
                         {
                             "tcId": 2170,
-			    "sKey" : "d2fb36bc4c064c6f0ac35cc70e55e0ac652d8570",
+			    "sKey" : "d2fb36bc4c064c6f0ac35cc70e55e0ac652d8570"
                         }
                     ]
                 }
