--- a/artifacts/acvp_sub_kdf135_tls.html
+++ b/artifacts/acvp_sub_kdf135_tls.html
@@ -931,7 +931,7 @@
                 "prereqVals" : [{"algorithm" : "HMAC", "valValue" : "123456"},
                                 {"algorithm" : "SHA", "valValue" : "123456"}],
 		"methods" : ["TLS1.0/1.1", "TLS1.2"],
-		"sha" : [ "SHA-256", SHA-384", SHA-512"]
+		"sha" : [ "SHA-256", "SHA-384", "SHA-512"]
             }
             </pre>
 <h1 id="rfc.appendix.B"><a href="#rfc.appendix.B">Appendix B.</a> <a href="#app-vs-ex" id="app-vs-ex">Example Test Vectors JSON Object</a></h1>
@@ -955,9 +955,9 @@
 			  "chRND" : "75ee876ab02ea8fb3cb43426c7f28648946ae091281d66d35ff0e749d0547a6d",
 			  "sRND" : "d352f20cb79b7e8fea6274850a15963a852728609e29a1e7c54257031a91721a",
 			  "cRND" : "f667e99811fb1c226110ac606e7e06b11964956f22164d4b5d4e1304c2659436"
-                        },
+                        }
                       ]
-                    },
+                    }
                   ]
                 }
             </pre>
@@ -971,7 +971,7 @@
                         {
                             "tcId": 2170,
 			    "mSecret" : "e9359c60c2b290b3666f3d1658e21c49fa2653f5b45b06815bfc45a9d01766e09d292bf7139f5621c4990a7360559c67",
-			    "kBlock" : "296f63ac740aa1f2953e86c9ae2073bc5d01d257fc20ec28c48c5f72d105a8ee408aeb56698f361a498b9be645de3ed4df6c6acb921517a3a962d3856f6a2cf749c13fbc2e2fb2d7b247e5adff311a348604213f2b137c49aac41cd657a0c2f50c6af92e48aa31e43fda97f2a60c4d4b1a4cf7a6ba49f4ecf4f96d9acb28c48",
+			    "kBlock" : "296f63ac740aa1f2953e86c9ae2073bc5d01d257fc20ec28c48c5f72d105a8ee408aeb56698f361a498b9be645de3ed4df6c6acb921517a3a962d3856f6a2cf749c13fbc2e2fb2d7b247e5adff311a348604213f2b137c49aac41cd657a0c2f50c6af92e48aa31e43fda97f2a60c4d4b1a4cf7a6ba49f4ecf4f96d9acb28c48"
                         }
                     ]
                 }
