--- a/artifacts/acvp_sub_kdf135_tpm.html
+++ b/artifacts/acvp_sub_kdf135_tpm.html
@@ -819,7 +819,7 @@
             {
                 "algorithm": "TPM",
                 "prereqVals" : [{"algorithm" : "HMAC", "valValue" : "123456"},
-		                {"algorithm" : "SHA", "valValue" : "123456"}],
+		                {"algorithm" : "SHA", "valValue" : "123456"}]
             }
             </pre>
 <h1 id="rfc.appendix.B"><a href="#rfc.appendix.B">Appendix B.</a> <a href="#app-vs-ex" id="app-vs-ex">Example Test Vectors JSON Object</a></h1>
@@ -836,10 +836,10 @@
                           "tcId": 2170,
 			  "auth" : "fd771b263f6be051a1d7eb0c5138fbfcafbd49de",
 			  "nonceEven" : "6b8790fd56b2b74734ea97db727ac9eb16e69831",
-			  "nonceOdd" : 4fa48de2db65fa7082f4acc9f85ecc81d40d1793",
-                        },
+			  "nonceOdd" : "4fa48de2db65fa7082f4acc9f85ecc81d40d1793"
+                        }
                       ]
-                    },
+                    }
                   ]
                 }
             </pre>
@@ -852,7 +852,7 @@
                     "testResults": [
                         {
                             "tcId": 2170,
-			    "sKey" : "c431a158b7b77d7e993515f8ebc2cd6add53b702",
+			    "sKey" : "c431a158b7b77d7e993515f8ebc2cd6add53b702"
                         }
                     ]
                 }
