--- a/artifacts/acvp_sub_kdf135_x963.html
+++ b/artifacts/acvp_sub_kdf135_x963.html
@@ -911,10 +911,10 @@
             {
                 "algorithm": "ANSI X9.63",
                 "prereqVals" : [{"algorithm" : "SHA", "valValue" : "123456"}],
-		"sha" : [ "SHA-256", SHA-384", SHA-512"]
+		"sha" : [ "SHA-256", "SHA-384", "SHA-512"],
 		"field" : [224, 571],
 		"sharedInfo" : [0, 512],
-		"keyLen" : [128, 2048],
+		"keyLen" : [128, 2048]
             }
             </pre>
 <h1 id="rfc.appendix.B"><a href="#rfc.appendix.B">Appendix B.</a> <a href="#app-vs-ex" id="app-vs-ex">Example Test Vectors JSON Object</a></h1>
@@ -926,18 +926,18 @@
                   "algorithm": "ANSI X9.63",
                   "testGroups": [
                     {
-		      "sha" : "SHA-1"
-		      "shSecLen"" : 192,
+		      "sha" : "SHA-1",
+		      "shSecLen" : 192,
 		      "sharedInfoLen" : 0,
 		      "keyLen" : 128,
                       "tests": [
                         {
                           "tcId": 2170,
 			  "z" : "1c7d7b5f0597b03d06a018466ed1a93e30ed4b04dc64ccdd",
-			  "sharedInfo" : "",
-                        },
+			  "sharedInfo" : ""
+                        }
                       ]
-                    },
+                    }
                   ]
                 }
             </pre>
@@ -950,7 +950,7 @@
                     "testResults": [
                         {
                             "tcId": 2170,
-			    "keyData" : "bf71dffd8f4d99223936beb46fee8ccc",
+			    "keyData" : "bf71dffd8f4d99223936beb46fee8ccc"
                         }
                     ]
                 }
